# LibreOllama

./:  --all  .agent.md  .eslintrc.design-system.json  .gitattributes  .gitignore  .mcp.json  .stylelintrc.json  .tsbuildinfo  .unimportedrc.json  AGENTS.md  ALL_TESTS_EXPORT.txt  ASANA_DESIGN_SYSTEM_COMPLETE.md  BOUNCE_BACK_FIX_TOOLBAR.md  CANVAS_COMPREHENSIVE_ANALYSIS.txt  CANVAS_COMPREHENSIVE_DOCUMENTATION.txt  CANVAS_DEBUG_PROTOCOL.md  CANVAS_FIXES_COMPLETION_REPORT.md  CANVAS_FIXES_TEST_RESULTS.md  CANVAS_INTERACTION_FIX_COMPLETE.md  CANVAS_MASTER_DOCUMENTATION.md  CANVAS_PERFORMANCE_MIGRATION_GUIDE.md  CANVAS_QUICK_START.md  CANVAS_REFACTORING_IMPLEMENTATION_REPORT.md  CANVAS_REFACTOR_DIFF_MAP.txt  CANVAS_REFACTOR_PR_CREATION_INSTRUCTIONS.md  CANVAS_REFACTOR_PR_DOCUMENTATION.md  CANVAS_RENDERING_FIXES_VALIDATION_REPORT.md  CANVAS_RENDERING_IMPLEMENTATION_PLAN.md  CANVAS_TABLE_FIXES_SUMMARY.md  CANVAS_TEXT_TOOL_BUG_ANALYSIS.md  CANVAS_UI_FIX_COMPLETION.md  CHANGELOG.md  CHAT_IMPROVEMENTS_IMPLEMENTATION_REPORT.md  CLAUDE.local.md  CLAUDE.md  CLEAR_LOCALSTORAGE_AND_TEST.md  COMPLETE_FIX_IMPLEMENTATION_GUIDE.md  COMPLETE_TASK_SYSTEM_RESEARCH_DOCUMENT.md  COMPLETE_TEST_SUITE_EXPORT.txt  CONSOLIDATION_COMPLETE_DELETE.md  (+184 more)
src-tauri/: .gitignore  Cargo.toml  canvas-save.json  tauri.conf.json  warnings.txt  warnings_new.txt
src-tauri/capabilities/: default.json
src-tauri/migrations/: 002_task_metadata.sql  003_add_timeblock_to_task_metadata.sql  004_add_task_id_map.sql  20250125_task_metadata.sql
src-tauri/src/: db.rs  lib.rs
src-tauri/src/commands/: advanced.rs  agents.rs  browser.rs  cache_manager.rs  canvas.rs  chat.rs  email_parser.rs  folders.rs  gmail.rs  gmail_attachments.rs  gmail_integration.rs  gmail_sync.rs  google_drive.rs  image_proxy.rs  links.rs  llm.rs  mcp.rs  mod.rs  n8n.rs  notes.rs  ollama.rs  projects.rs  rate_limiter.rs  secure_oauth_flow.rs  secure_token_commands.rs  secure_token_storage.rs  sync_manager.rs  text_processing.rs  token_storage.rs
src-tauri/src/commands/agents/: lifecycle.rs  mod.rs
src-tauri/src/commands/calendar/: api.rs  mod.rs
src-tauri/src/commands/chat/: mod.rs  sessions.rs
src-tauri/src/commands/gmail/: api.rs  auth.rs  cache.rs  compose.rs  contacts.rs  image_proxy.rs  migration.rs  mod.rs  oauth_handler.rs  sync.rs
src-tauri/src/commands/system/: advanced.rs  debug_db.rs  health.rs  migrations.rs  mod.rs
src-tauri/src/commands/tasks/: all_task_data.rs  api.rs  id_map.rs  metadata.rs  metadata_simple.rs  mod.rs  sync.rs  sync.rs.bak  sync_fixed.rs  sync_simple.rs
src-tauri/src/config/: mod.rs
src-tauri/src/database/: README.md  connection.rs  integration_tests.rs  mod.rs  models.rs  models_v2.rs  operations.rs  operations_v2.rs  operations_v4.rs  schema.rs  schema_onboarding.rs  schema_v13.rs  schema_v14.rs  schema_v2.rs  schema_v4.rs  schema_v5.rs  sync_operations.rs  test.rs
src-tauri/src/database/operations/: agent_operations.rs  cache_operations.rs  chat_operations.rs  conversation_operations.rs  folder_operations.rs  gmail_operations.rs  link_operations.rs  log_operations.rs  mcp_operations.rs  mod.rs  n8n_operations.rs  note_operations.rs  onboarding_operations.rs  performance_operations.rs  preference_operations.rs  project_operations.rs  template_operations.rs
src-tauri/src/errors/: mod.rs
src-tauri/src/models/: mod.rs  task_id_map.rs  task_metadata.rs
src-tauri/src/services/: mod.rs
src-tauri/src/services/gmail/: api_service.rs  attachment_service.rs  auth_service.rs  cache_service.rs  compose_service.rs  mod.rs  models.rs  sync_service.rs
src-tauri/src/services/gmail/tests/: api_integration_test.rs  mod.rs  (+2 more)
src-tauri/src/services/google/: mod.rs  tasks_service.rs
src-tauri/src/setup/: mod.rs  webview_config.rs
src-tauri/src/tests/integration/: gmail_integration.test.rs  gmail_integration_test.rs
src-tauri/src/utils/: cache.rs  crypto.rs  http.rs  mod.rs  networking.rs  time.rs
(+2897 files in other folders)
