[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["unstable"] }
wry = "0.47"
tauri-plugin-dialog = "2.0.0-beta.7"
tauri-plugin-fs = "2.0.0-beta.5"
tauri-plugin-opener = "2.0"
tauri-plugin-shell = "2.0"
printpdf = "0.7"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
chrono = { version = "0.4.38", features = ["serde"] }
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
oauth2 = "4.4"
url = "2.4"
base64 = "0.22.1"
rand = "0.8"
sha2 = "0.10"
aes-gcm = "0.10"
keyring = "2.3"
argon2 = "0.5"
mailparse = "0.14"
urlencoding = "2.1"
futures = "0.3.30"
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["codec"] }
lazy_static = "1.4"
dirs = "5.0"
hex = "0.4"
thiserror = "1.0"
mime = "0.3"
sysinfo = "0.30"
bytes = "1.0"
regex = "1.0"
open = "5.0"
webbrowser = "0.8"
strip_markdown = "0.2.0"
async-openai = "0.19.1"

[features]
# Enable system-advanced by default so PDF export is available
default = ["system-advanced", "gmail-compose", "folders"]

# Optional features to include additional command surfaces
system-advanced = []
gmail-compose = []
gmail-migration = []
google-drive = []
tasks-simple = []
agents-admin = []
projects-admin = []
folders = []
llm-settings = []

# Process management for sidecar

# Database dependencies - Using bundled SQLite for now, will add encryption later

